--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,14 @@
                             <a class="nav-link" href="{{ url_for('friend_suggestions') }}">Find Friends</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('messages') }}">
+                                Messages
+                                {% if current_user.get_unread_messages_count() > 0 %}
+                                    <span class="badge bg-danger">{{ current_user.get_unread_messages_count() }}</span>
+                                {% endif %}
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('profile') }}">Profile</a>
                         </li>
                         <li class="nav-item">
