--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,11 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('groups') }}">
+                                <i class="bi bi-people-fill"></i> Group Chat
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('friend_map') }}">
                                 <i class="bi bi-map"></i> Map
                             </a>
